tests/ui/panic-handler/panic-handler-requires-panic-info.stderr
error: cannot find attribute `panic_handler` in this scope
  --> $DIR/panic-handler-requires-panic-info.rs:8:3
   |
LL | #[panic_handler]
   |   ^^^^^^^^^^^^^

error: aborting due to 1 previous error

